♻️ refactor: Constantes e testes de entidade Client padrão DTO